css/NotAnotherAnimeTheme.css
/* ... */
.headerFill-TTyrtz {
    background-color: rgb(0, 0, 0);
}

.topSectionPlaying-3jAH9b {
    background: #000000;
}

.theme-dark .body-3_tdh6 {
    background-color: #000000;
}

.topSectionNormal-2LlRG1 {
    background-color: #000000;
}

.theme-dark .body-3rkFrF, .theme-dark .footer-2J5zqP {
    background-color: #000000;
}

.headerPlaying-2eYqm9 {
    background: #000000;
}

.theme-dark .lfg-3xoFkI {
    background-color: rgba(0, 0, 0, 0.8);
}

.theme-dark .layer-kosS71, .theme-dark .layers-20RVFW {
    background: rgba(0, 0, 0, 0);
}


.headerSpotify-1fSJPO {
    background: #000000;
}

.topSectionSpotify-3744IX {
    background: #000000;
}

.theme-dark .typing-3eiiL_ {
    background-color: rgba(0, 0, 0, 0);
}

.headerSpotify-26yUf5 {
    background: #000000;
}

.theme-dark .body-3ljq11, .theme-dark .footer-2wFs91 {
    background-color: #000000;
    color: hsla(0,0%,100%,.8);
}

.theme-dark .headerNormal-3Vn9nT {
    background-color: #000000;
}

.headerPlaying-2Q7mBy {
    background: #000000;
}

